Cleaning up the code & copying design changes from the new website!

--- a/src/assets/scss/_functions.scss
+++ b/src/assets/scss/_functions.scss
@@ -12,6 +12,7 @@
 }
 // URL ENCODER FOR INLINE SVGS
 // Encodes dangerous characters for maximum compatability (down to IE9)
+// https://codepen.io/kevinweber/pen/dXWoRw
 @function url-encode($string) {
   $map: (
     "%": "%25",
