--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -6,8 +6,8 @@
 .main-nav__container {
   position: fixed;
   top: $nav-height;
-  left: calc(100% + 200px);
-  width: 200px;
+  left: calc(100% + $nav-mobile-width);
+  width: $nav-mobile-width;
   height: 100%;
   background: $white;
   text-align: left;
@@ -15,11 +15,11 @@
   transition: left .3s ease-in, box-shadow 0s linear .3s;
   z-index: 2;
   &.active {
-    left: calc(100% - 200px);
+    left: calc(100% - $nav-mobile-width);
     box-shadow: $navigation-drawer-shadow;
     transition: left .3s ease-out;
   }
-  @include media-query('gt-tablet') {
+  @include media-query('gt-800') {
     position: absolute;
     top: 0;
     right: 64px + $gutter-px;
@@ -38,7 +38,7 @@
     background: $grey-350;
     &.active {
       box-shadow: $navigation-drawer-shadow--dark;
-      @include media-query('gt-tablet') {
+      @include media-query('gt-800') {
         box-shadow: none;
       }
     }
@@ -49,10 +49,10 @@
   margin: 0;
   flex-flow: column nowrap;
   justify-content: flex-start;
-  &:hover .main-nav__link {
+  &:hover .main-nav__link-name {
     opacity: .75;
   }
-  @include media-query('gt-tablet') {
+  @include media-query('gt-800') {
     flex-flow: row nowrap;
   }
 }
@@ -60,15 +60,18 @@
   display: inline-block;
   padding: 0 ($baseline-px * .5);
   width: 100%;
-  height: $nav-height;
+  height: $nav-logo-height;
   color: $grey-600;
   text-decoration: none;
+  vertical-align: top;
   transition: opacity .15s;
   &:hover {
     color: $red-700;
-    opacity: 1 !important;
-    .main-nav__link-name:after {
-      width: 100%;
+    .main-nav__link-name {
+      opacity: 1;
+      &:after {
+        width: 100%;
+      }
     }
   }
   &.active {
@@ -77,8 +80,9 @@
       width: 100%;
     }
   }
-  @include media-query('gt-tablet') {
+  @include media-query('gt-800') {
     width: auto;
+    height: $nav-height;
     &:hover .main-nav__link-name:after,
     &.active .main-nav__link-name:after {
       height: 4px;
@@ -97,10 +101,14 @@
 .main-nav__link-name {
   position: relative;
   display: inline-block;
+  max-width: $nav-mobile-width - $baseline-px;
   font-size: $nav-font-rem;
-  line-height: $nav-height;
+  line-height: $nav-logo-height;
   font-weight: 700;
+  white-space: nowrap;
   vertical-align: top;
+  pointer-events: none;
+  overflow: hidden;
   &:after {
     @extend %psuedo-element;
     position: absolute;
@@ -111,7 +119,8 @@
     background: currentColor;
     transition: width .15s;
   }
-  @include media-query('gt-tablet') {
+  @include media-query('gt-800') {
+    line-height: $nav-height;
     &:after {
       bottom: 1px;
       width: 100%;
@@ -120,7 +129,9 @@
     }
   }
 }
-
+.q-kern {
+  letter-spacing: -2px;
+}
 .mobile-navigation-cover {
   position: fixed;
   top: $nav-height;
@@ -128,7 +139,6 @@
   width: 100%;
   height: 100%;
   background: $black;
-  //z-index: 1;
   opacity: 0;
   visibility: hidden;
   transition: opacity .3s ease-in, visibility 0s linear .3s;
@@ -137,7 +147,7 @@
     visibility: visible;
     transition: opacity .3s ease-out;
   }
-  @include media-query('gt-tablet') {
+  @include media-query('gt-800') {
     display: none;
   }
 }
