Updated text in footer + footer style

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -65,6 +65,7 @@ $nav-logo-height:     60px;
 $nav-logo-padding:    ($nav-height - $nav-logo-height) *.5;
 
 $page-width:          980px;
+$footer-width:        780px;
 
 /*---------------------------------------------------------------------------*\
     Breakpoints
